--- a/templates/pages/home_page.html
+++ b/templates/pages/home_page.html
@@ -50,7 +50,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
             z-index: 10000;
-            border: 2px solid #f3a33a;
+            border: 2px solid #00a658;
             display: none;
         }
 
@@ -63,7 +63,7 @@
             position: absolute;
             top: 8px;
             right: 8px;
-            background: #f3a33a;
+            background: #00a658;
             border: none;
             border-radius: 50%;
             width: 25px;
@@ -79,7 +79,7 @@
         }
 
         h3 {
-            color: #e65100;
+            color: #0f814cff;
             margin: 0 0 12px 0;
             text-align: center;
             font-size: 18px;
@@ -97,7 +97,7 @@
             padding: 10px;
             margin: 8px 0;
             border-radius: 6px;
-            border-left: 3px solid #f3a33a;
+            border-left: 3px solid #00a658;
         }
 
         .news-date {
@@ -129,7 +129,7 @@
         .details-btn {
             display: inline-block;
             padding: 8px 16px;
-            background: #f3a33a;
+            background: #00a658;
             color: white;
             text-decoration: none;
             border-radius: 15px;
