--- a/templates/personal_account/profile_edit/profile_edit_purchase_information.html
+++ b/templates/personal_account/profile_edit/profile_edit_purchase_information.html
@@ -6,6 +6,7 @@
             {% csrf_token %}
             <div class="form-section">
                 <h3>Информация о покупке</h3>
+                <h3>Заполняйте только те данные, которые у вас имеются</h3>
                 <div class="form-row">
 
                     <div class="form-group">
@@ -99,7 +100,7 @@
             box-sizing: border-box;
         }
         .btn-primary {
-            background-color: #007bff;
+            background-color: #00a658;
             color: white;
             padding: 10px 20px;
             border: none;
