--- a/templates/personal_account/requisites.html
+++ b/templates/personal_account/requisites.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="content">
         <div class="banner">
-            <h2>Реквизиты для оплаты взносов</h2>
+            {% comment %} <h2>Реквизиты для оплаты взносов</h2>
             <h6>Получаель платежа: <br>
             Межрегиональный потребительский кооператив «Бест Вей» <br>
             ИНН/КПП 7814613150/781401001<br>
@@ -10,7 +10,7 @@
             р/с 40703810755070009293 <br>
             в СевероЗападном Банке ПАО Сбербанк г. СанктПетербург<br>
             к/с 30101810500000000653<br>
-            БИК 044030653</h6>
+            БИК 044030653</h6> {% endcomment %}
         </div>
     </div>
 {% endblock %}
