--- a/templates/personal_account/document_application.html
+++ b/templates/personal_account/document_application.html
@@ -71,7 +71,7 @@
             box-sizing: border-box;
         }
         .btn-primary {
-            background-color: #007bff;
+            background-color: #00a658;
             color: white;
             padding: 10px 20px;
             border: none;
