--- a/templates/personal_account/profile_edit/profile_edit_source_information.html
+++ b/templates/personal_account/profile_edit/profile_edit_source_information.html
@@ -2,6 +2,7 @@
 {% block content %}
     <div class="banner">
         <h2>Редактирование</h2>
+        <h3>Если все данные указаны верно, нажмите кнопку "Сохранить"</h3>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}                
             <div class="form-section">
@@ -14,12 +15,6 @@
                     <div class="form-group">
                         {{ form.parther_phone.label_tag }}
                         {{ form.parther_phone }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.parther_code.label_tag }}
-                        {{ form.parther_code }}
-                    </div>
-                    <div class="form-group">
                     </div>
                 </div>
             </div>
@@ -77,7 +72,7 @@
             box-sizing: border-box;
         }
         .btn-primary {
-            background-color: #007bff;
+            background-color: #00a658;
             color: white;
             padding: 10px 20px;
             border: none;
