--- a/templates/personal_account/signup.html
+++ b/templates/personal_account/signup.html
@@ -21,31 +21,14 @@
                 <p>{{ field }}</p>
                 {% endif %}
             {% endfor %}
-
-            <div class="form-label" style="display: inline;">
-                {{ form.agree_to_terms }}
-                <span>
-                    Я согласен с 
-                    <a href="/static/img/approval/membership_agreement.pdf" target="_blank" class="terms-link">
-                        условиями обработки данных
-                    </a>
-                </span>
-            </div>
-
             <div class="auth-buttons_reset">
-                <button type="submit" class="auth-button">Зарегистрироваться</button>  
+                <button type="submit" class="auth-button">Пригласить</button>  
             </div>
         </form>
     </div>
 
     <div class="banner_small">
         <h2>Поддержка</h2>
-        <p>По всем возникающим вопросам просим обращаться по электронной почте:</p>
-            <div style="margin: 15px 10; overflow-wrap: break-word;">
-                <a href="mailto:help@bestwaycoop.ru" class="email-link">
-                    help@bestwaycoop.ru
-                </a>
-            </div>
-        </div>
+        <p>По всем вопросам просим оставлять обратную связь в разделе «Помощь»</p>
     </div>
 {% endblock content %}
