--- a/templates/personal_account/requisites.html
+++ b/templates/personal_account/requisites.html
@@ -2,15 +2,29 @@
 {% block content %}
     <div class="content">
         <div class="banner">
-            {% comment %} <h2>Реквизиты для оплаты взносов</h2>
-            <h6>Получаель платежа: <br>
-            Межрегиональный потребительский кооператив «Бест Вей» <br>
-            ИНН/КПП 7814613150/781401001<br>
-            Банковские реквизиты: <br>
-            р/с 40703810755070009293 <br>
-            в СевероЗападном Банке ПАО Сбербанк г. СанктПетербург<br>
-            к/с 30101810500000000653<br>
-            БИК 044030653</h6> {% endcomment %}
+            <h2>Реквизиты для оплаты взносов</h2>
+            <div class="requisites">
+                <h6>
+                    <strong>Получатель платежа:</strong><br>
+                    МЕЖРЕГИОНАЛЬНЫЙ ПОТРЕБИТЕЛЬСКИЙ КООПЕРАТИВ ПО УЛУЧШЕНИЮ ЖИЛИЩНЫХ УСЛОВИЙ "НАШ ДОМ"<br><br>
+                    
+                    <strong>Юридический адрес организации:</strong><br>
+                    425011, РОССИЯ, РЕСП МАРИЙ ЭЛ, Г ВОЛЖСК, УЛ ЛЕНИНА, Д 63, КВ 2<br><br>
+                    
+                    <strong>ИНН:</strong> 1200020630<br>
+                    <strong>КПП:</strong> 120001001<br>
+                    <strong>ОГРН/ОГРНИП:</strong> 1251200003526<br><br>
+                    
+                    <strong>Расчетный счет:</strong> 40703810300000749503<br><br>
+                    
+                    <strong>Банк:</strong> АО «ТБанк»<br>
+                    <strong>ИНН банка:</strong> 7710140679<br>
+                    <strong>БИК банка:</strong> 044525974<br>
+                    <strong>Корреспондентский счет банка:</strong> 30101810145250000974<br>
+                    <strong>Юридический адрес банка:</strong><br>
+                    127287, г. Москва, ул. Хуторская 2-я, д. 38А, стр. 26
+                </h6>
+            </div>
         </div>
     </div>
 {% endblock %}
