--- a/templates/personal_account/profile_edit/profile_edit_personal_information.html
+++ b/templates/personal_account/profile_edit/profile_edit_personal_information.html
@@ -225,7 +225,7 @@
             box-sizing: border-box;
         }
         .btn-primary {
-            background-color: #00a658;
+            background-color: #9bd1e8;
             color: white;
             padding: 10px 20px;
             border: none;
